--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "react-icons": "^5.0.1",
+        "react-slick": "^0.29.0",
+        "swiper": "^11.0.5"
     }
 }
