--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "classnames": "^2.5.1",
         "react-icons": "^5.0.1",
         "react-slick": "^0.29.0",
         "swiper": "^11.0.5"
