--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.3",
         "classnames": "^2.5.1",
         "react-icons": "^5.0.1",
         "react-slick": "^0.29.0",
