--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dependencies": {
         "@heroicons/react": "^2.1.3",
         "classnames": "^2.5.1",
+        "markdown-to-jsx": "^7.4.7",
         "react-icons": "^5.0.1",
+        "react-router-dom": "^6.23.0",
         "react-slick": "^0.29.0",
         "swiper": "^11.0.5"
     }
