--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-markdown": "^9.0.1",
         "react-router-dom": "^6.23.0",
         "react-slick": "^0.29.0",
+        "react-swipeable": "^7.0.2",
         "swiper": "^11.0.5"
     }
 }
