--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "classnames": "^2.5.1",
         "clsx": "^2.1.1",
         "framer-motion": "^11.12.0",
+        "lucide-react": "^0.476.0",
         "markdown-to-jsx": "^7.4.7",
         "react-dropzone": "^14.3.5",
         "react-icons": "^5.3.0",
@@ -39,6 +40,7 @@
         "react-router-dom": "^6.23.0",
         "react-slick": "^0.29.0",
         "react-swipeable": "^7.0.2",
+        "shadcn-ui": "^0.9.4",
         "swiper": "^11.0.5",
         "ziggy-js": "^2.5.1"
     }
