--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/.phpunit.cache
-
 /node_modules
 /public/hot
 /public/storage
@@ -9,6 +7,7 @@
 .env.backup
 .env.production
 .phpunit.result.cache
+.phpunit.cache
 Homestead.json
 Homestead.yaml
 auth.json
@@ -17,3 +16,28 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+/vendor
+
+# Laravel-Specific
+/storage/oauth-private.key
+/storage/oauth-public.key
+/storage/framework/*
+/storage/logs/*
+/bootstrap/cache/*
+
+# Frontend (React + Inertia)
+/public/mix-manifest.json
+/public/build
+/public/css
+/public/js
+
+# Cache & Debugging
+/.cache
+/.eslintcache
+/.nuxt
+/.next
+
+# System-Specific & IDE Files
+/.DS_Store
+/.editorconfig
+/.gitattributes
